# VMPANK

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CONFIG.md  Makefile  README.md  RUNBOOK.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml
ansible/: ansible.cfg  requirements.yml  site.yml
ansible/roles/awg/handlers/: main.yml
ansible/roles/awg/tasks/: main.yml
ansible/roles/docker/tasks/: main.yml
ansible/roles/harden/tasks/: main.yml
ansible/roles/marzban/handlers/: main.yml
ansible/roles/marzban/tasks/: main.yml
ansible/roles/marzban/templates/: docker-compose.yml.j2  env.j2
awg/: README.md
cli/vpnctl/: __init__.py  alerts.py  awg.py  backup.py  cli.py  configure.py  deploy.py  marzban.py  monitoring.py  paths.py  provision.py  qr.py  reality.py  rotate.py  settings.py  sni.py  users.py
infra/: README.md
infra/providers/scaleway/: main.tf  outputs.tf  variables.tf  versions.tf
infra/providers/upcloud/: main.tf  outputs.tf  variables.tf  versions.tf
marzban/: .env.example  docker-compose.yml
monitoring/: README.md
monitoring/systemd/: vpn-backup.service  vpn-backup.timer  vpn-healthcheck.service  vpn-healthcheck.timer  vpn-ru-check.service  vpn-ru-check.timer
tests/: test_awg.py  test_backup.py  test_configure.py  test_infra_wrappers.py  test_marzban.py  test_monitoring.py  test_reality.py  test_rotate.py  test_sni.py  test_users.py
