[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vpnctl"
version = "0.1.0"
description = "Operator CLI for a self-hosted, DPI-resistant VPN (VLESS+Reality + AmneziaWG)"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "cryptography>=42",
    "python-dotenv>=1.0",
    "qrcode>=7.4",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
vpnctl = "vpnctl.cli:app"

[tool.setuptools.packages.find]
where = ["cli"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["cli", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
files = ["cli/vpnctl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["cli"]
